filter wont get better, test doesnt work, dont know why